test/integration/tracing/testdata/tracing.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.8
        ports:
        - name: collection
          containerPort: 14268
        - name: ui
          containerPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - name: collection
    port: 14268
  - name: ui
    port: 16686
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: oc-collector-conf
  labels:
    app: opencensus
    component: oc-collector-conf
data:
  oc-collector-config: |
    receivers:
      opencensus:
        port: 55678
      zipkin:
        port: 9411
      jaeger:
        jaeger-thrift-http-port: 14268
    queued-exporters:
      jaeger-all-in-one:
        num-workers: 4
        queue-size: 100
        retry-on-failure: true
        sender-type: jaeger-thrift-http
        jaeger-thrift-http:
          collector-endpoint: http://jaeger:14268/api/traces
          timeout: 5s
---
apiVersion: v1
kind: Service
metadata:
  name: oc-collector
  labels:
    app: opencesus
    component: oc-collector
spec:
  ports:
  - name: opencensus
    port: 55678
    protocol: TCP
    targetPort: 55678
  - name: zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  - name: jaeger
    port: 14268
    protocol: TCP
    targetPort: 14268
  selector:
    component: oc-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-collector
  labels:
    app: opencensus
    component: oc-collector
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  selector:
    matchLabels:
      app: opencensus
  template:
    metadata:
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8888"
        prometheus.io/scrape: "true"
      labels:
        app: opencensus
        component: oc-collector
    spec:
      containers:
      - command:
          - "/occollector_linux"
          - "--config=/conf/oc-collector-config.yaml"
        env:
        - name: GOGC
          value: "80"
        image: omnition/opencensus-collector:0.1.10
        name: oc-collector
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 55678
        - containerPort: 9411
        - containerPort: 14268
        volumeMounts:
        - name: oc-collector-config-vol
          mountPath: /conf
        livenessProbe:
          httpGet:
            path: /
            port: 13133
        readinessProbe:
          httpGet:
            path: /
            port: 13133
      volumes:
        - configMap:
            name: oc-collector-conf
            items:
              - key: oc-collector-config
                path: oc-collector-config.yaml
          name: oc-collector-config-vol
